Added integration tests and improved awareness speed